# Quantitative-Trading

./: 01_Reasearch.ipynb  02_Pairs_Trading.ipynb  03_Compute_Volatility.ipynb  04_Sharpe_Ratio.ipynb  1_Reasearch.ipynb  LICENSE  README.md  environment.yml  pyproject.toml
Machine_Learning/: 01_Backpropagation.py  03_NN.py
Machine_Learning_Finance/: 00_NN.py  02_LSTM.ipynb  03_NN_Keras.ipynb  04_NN_Blanky.ipynb  04_NN_TF_Keras.ipynb  05_BNN.ipynb  1_Backpropagation.py  2_LSTM.ipynb
Machine_Learning_Finance/.ipynb_checkpoints/: 2_LSTM-checkpoint.ipynb
Neural_Networks/: 00_NN.py
Notebooks/: 00_Test.ipynb  01_Reasearch.ipynb  02_Pairs_Trading.ipynb  03_Compute_Volatility.ipynb  04_Sharpe_Ratio.ipynb  05_ZScore.ipynb  06_GBM.ipynb  07_Sortino_Ratio.ipynb  08_SQLite.ipynb  08_market_data.sqlite  10_NN_Keras.ipynb  12_BNN.ipynb
Test/: hello.py
VS-QTrading/conda-meta/: _libgcc_mutex-0.1-main.json  _openmp_mutex-5.1-1_gnu.json  alsa-lib-1.2.14-hb9d3cd8_0.json  aom-3.9.1-hac33072_0.json  asttokens-3.0.0-pyhd8ed1ab_1.json  attr-2.5.1-h166bdaf_1.json  bzip2-1.0.8-h5eee18b_6.json  c-ares-1.34.5-hb9d3cd8_0.json  ca-certificates-2025.4.26-hbd8a1cb_0.json  ca-certificates-2025.6.15-hbd8a1cb_0.json  cairo-1.18.4-h3394656_0.json  comm-0.2.2-pyhd8ed1ab_1.json  dav1d-1.2.1-hd590300_0.json  dbus-1.16.2-h3c4dab8_0.json  debugpy-1.8.11-py313h6a678d5_0.json  debugpy-1.8.14-py311hfdbb021_0.json  decorator-5.2.1-pyhd8ed1ab_0.json  exceptiongroup-1.3.0-pyhd8ed1ab_0.json  executing-2.2.0-pyhd8ed1ab_0.json  expat-2.7.0-h5888daf_0.json  expat-2.7.1-h6a678d5_0.json  (+210 more)
(+1134 files in other folders)
