[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "VS-QTrading"
version = "0.1.0"
authors = [{name = "Santiago Cruz", email = "algonetinc@gmail.com"}]
description = "A quantitative trading strategy implementation"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas >=2.0",
    "numpy >=1.24",
    "scipy >=1.10",
    "backtrader >=1.9",
    "yfinance >=0.2",
]

[project.optional-dependencies]
dev = ["pytest", "black", "flake8"]
docs = ["sphinx"]

[project.scripts]
backtest = "src.backtest:main"